--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,8 @@ Authors@R: person("Jeff", "Jacobs", email = "jj1088@georgetown.edu", role = c("a
 Description: Provides a set of RStudio addins for JAG -- R functions that can be
     bound to keyboard shortcuts, and called from the RStudio UI.
 Depends:
-    R (>= 3.0.0)
+    R (>= 3.0.0),
+    httr2
 Imports:
     rstudioapi (>= 0.4)
 License: MIT + file LICENSE
